# ShinyVerilogIFT

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
docs/: Flow_Rules.md  Uncertainties.md  What_Are_Tags.md
shiny_verilog_ift/: __init__.py  boolean_op_transforms.py  cli.py
src/: main.rs
tests/: __init__.py  test_boolean_op_transforms.py  test_tests.py
