[project]
name = "shiny-verilog-ift"
version = "0.1.0"
description = "RTL-Level Information Flow Tracking for Verilog code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pyright",
]

[tool.ruff]
select = [
    "ALL",
]

[tool.ruff.lint.per-file-ignores]
"./tests/**/*.py" = [
  "S101", # Allow asserts always.
]
